--- a/app/build.gradle
+++ b/app/build.gradle
@@ -36,4 +36,6 @@ dependencies {
     androidTestImplementation 'androidx.test:runner:1.2.0'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.2.0'
     implementation project(':WebView')
+    implementation "com.google.android.material:material:1.0.0"
+    implementation 'com.squareup.picasso:picasso:2.71828'
 }
