--- a/app/build.gradle
+++ b/app/build.gradle
@@ -38,4 +38,7 @@ dependencies {
     implementation project(':WebView')
     implementation "com.google.android.material:material:1.0.0"
     implementation 'com.squareup.picasso:picasso:2.71828'
+    implementation 'com.afollestad.material-dialogs:core:3.1.1'
+    implementation 'com.afollestad.material-dialogs:input:3.1.1'
+    implementation 'com.afollestad.material-dialogs:bottomsheets:3.1.1'
 }
