--- a/app/build.gradle
+++ b/app/build.gradle
@@ -43,4 +43,5 @@ dependencies {
     implementation 'com.afollestad.material-dialogs:bottomsheets:3.1.1'
     implementation 'com.github.elevenetc:textsurface:0.9.1'
     implementation 'com.github.f0ris.sweetalert:library:1.5.6'
+    implementation 'com.google.code.gson:gson:2.8.6'
 }
