--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,14 +9,16 @@
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
-        tools:replace="android:icon"
         android:supportsRtl="true"
-        android:theme="@style/AppTheme">
-        <activity android:name=".UITestActivity"></activity>
-        <activity android:name=".hetzer.HetzerConditionsActivity"></activity>
-        <activity android:name=".DashboardActivity"></activity>
-        <activity android:name=".hetzer.HetzerActivity"></activity>
-        <activity android:name=".AuthenticationActivity"></activity>
+        android:theme="@style/AppTheme"
+        tools:replace="android:icon">
+        <activity android:name=".FollowingManagement"></activity>
+        <activity android:name=".FollowerManagement" />
+        <activity android:name=".UITestActivity" />
+        <activity android:name=".hetzer.HetzerConditionsActivity" />
+        <activity android:name=".DashboardActivity" />
+        <activity android:name=".hetzer.HetzerActivity" />
+        <activity android:name=".AuthenticationActivity" />
         <activity android:name=".MainActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
