--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,31 +1,34 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
-    package="com.sasarinomari.tweetcleaner">
+          xmlns:tools="http://schemas.android.com/tools"
+          package="com.sasarinomari.tweetcleaner">
 
-    <uses-permission android:name="android.permission.INTERNET" />
+    <uses-permission android:name="android.permission.INTERNET"/>
 
     <application
-        android:allowBackup="true"
-        android:icon="@mipmap/ic_launcher"
-        android:label="@string/app_name"
-        android:supportsRtl="true"
-        android:theme="@style/AppTheme"
-        tools:replace="android:icon">
-        <activity android:name=".FollowingManagement"></activity>
-        <activity android:name=".FollowerManagement" />
-        <activity android:name=".UITestActivity" />
-        <activity android:name=".hetzer.HetzerConditionsActivity" />
-        <activity android:name=".DashboardActivity" />
-        <activity android:name=".hetzer.HetzerActivity" />
-        <activity android:name=".AuthenticationActivity" />
+            android:allowBackup="true"
+            android:icon="@mipmap/ic_launcher"
+            android:label="@string/app_name"
+            android:supportsRtl="true"
+            android:theme="@style/AppTheme"
+            tools:replace="android:icon" tools:ignore="GoogleAppIndexingWarning">
         <activity android:name=".MainActivity">
             <intent-filter>
-                <action android:name="android.intent.action.MAIN" />
+                <action android:name="android.intent.action.MAIN"/>
 
-                <category android:name="android.intent.category.LAUNCHER" />
+                <category android:name="android.intent.category.LAUNCHER"/>
             </intent-filter>
         </activity>
+        <activity android:name=".AuthenticationActivity"/>
+        <activity android:name=".DashboardActivity"/>
+        <activity android:name=".hetzer.HetzerConditionsActivity"/>
+        <activity android:name=".hetzer.HetzerActivity"/>
+        <activity android:name=".FollowingManagement"/>
+        <activity android:name=".FollowerManagement"/>
+        <activity android:name=".UITestActivity"/>
+        <meta-data
+                android:name="com.google.android.gms.ads.APPLICATION_ID"
+                android:value="@string/admob_app_id"/>
     </application>
 
 </manifest>
