--- a/app/build.gradle
+++ b/app/build.gradle
@@ -7,7 +7,7 @@ apply plugin: 'kotlin-android-extensions'
 android {
     compileSdkVersion 28
     defaultConfig {
-        applicationId "com.sasarinomari.tweetcleaner"
+        applicationId "com.sasarinomari.tweeper"
         minSdkVersion 23
         targetSdkVersion 27
         versionCode 1
