--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -6,6 +6,7 @@
     <uses-permission android:name="android.permission.INTERNET"/>
     <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE"/>
     <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE"/>
+    <uses-permission android:name="android.permission.FOREGROUND_SERVICE" />
 
     <application
             android:allowBackup="true"
@@ -15,6 +16,8 @@
             android:theme="@style/AppTheme"
             tools:ignore="GoogleAppIndexingWarning"
             tools:replace="android:icon">
+        <service android:name="com.sasarinomari.tweeper.hetzer.HetzerService"/>
+
         <activity android:name=".auth.TokenManagementActivity"></activity>
         <activity android:name=".tweetreport.TweetReportActivity"></activity>
         <activity android:name=".chainb.ChainBlockActivity"></activity>
