트윗 청소기 서비스 중복 실행 방지 코드 추가

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -16,7 +16,7 @@
             android:theme="@style/AppTheme"
             tools:ignore="GoogleAppIndexingWarning"
             tools:replace="android:icon">
-        <service android:name="com.sasarinomari.tweeper.hetzer.HetzerService"/>
+        <service android:name="com.sasarinomari.tweeper.hetzer.HetzerService" android:exported="true"/>
 
         <activity android:name=".auth.TokenManagementActivity"></activity>
         <activity android:name=".tweetreport.TweetReportActivity"></activity>
