생산성 향상을 위해 모든 서비스에서 사용할 수 있는 다음 공용 클래스를 생성 :     BaseService, ReportInterface, RportListActivty, DefaultListItem

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -28,8 +28,8 @@
         <activity android:name=".hetzer.HetzerActivity" />
         <activity android:name=".hetzer.HetzerConditionsActivity" />
         <activity android:name=".hetzer.HetzerReportActivity" />
-        <activity android:name=".hetzer.HetzerReportListActivity"/>
-        <activity android:name=".fwmanage.FollowerManagement" />
+        <activity android:name=".report.ReportListActivity"/>
+        <activity android:name=".fwmanage.FollowManagementActivity" />
         <activity android:name=".auth.AuthenticationActivity" />
 
         <activity android:name=".chainb.ChainBlockActivity" />
@@ -45,7 +45,7 @@
             android:name=".hetzer.HetzerService"
             android:exported="true" />
         <service
-            android:name=".fwmanage.FollowerManagerService"
+            android:name=".fwmanage.FollowManagementService"
             android:exported="true" />
     </application>
 
