Report를 기록할 때 id도 기록하도록 변경, 최근 report가 위에 나오게 변경, Simplized 데이터 모델 패키지 분류 및 여러 자잘한 변경, 트윗 일지 기록 서비스를 ForegroundService화, 이에 속하는 Activity들에 RecycleInjector 적용,

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -24,18 +24,27 @@
         <activity android:name=".auth.AuthenticationActivity" />
         <activity android:name=".report.ReportListActivity"/>
 
-        <!--Hetzer Activities-->
+        <!--Hetzer-->
         <activity android:name=".hetzer.HetzerActivity" />
         <activity android:name=".hetzer.HetzerConditionsActivity" />
         <activity android:name=".hetzer.HetzerReportActivity" />
+        <service
+            android:name=".hetzer.HetzerService"
+            android:exported="true" />
 
-        <!--Follow Management Activities-->
+        <!--Follow Management-->
         <activity android:name=".fwmanage.FollowManagementActivity" />
         <activity android:name=".fwmanage.FollowManagementReportActivity" />
+        <service
+            android:name=".fwmanage.FollowManagementService"
+            android:exported="true" />
 
-        <!--Tweet Report Activities-->
-        <activity android:name=".tweetreport.TweetReportActivity" />
-        <activity android:name=".tweetreport.TweetReportDetail" />
+        <!--Tweet Analytics-->
+        <activity android:name=".analytics.AnalyticsActivity" />
+        <activity android:name=".analytics.AnalyticsReportActivity" />
+        <service
+            android:name=".analytics.AnalyticsService"
+            android:exported="true" />
 
         <!--Chain Block Activities-->
         <activity android:name=".chainb.ChainBlockActivity" />
@@ -45,12 +54,6 @@
             android:name="com.google.android.gms.ads.APPLICATION_ID"
             android:value="@string/admob_app_id" />
 
-        <service
-            android:name=".hetzer.HetzerService"
-            android:exported="true" />
-        <service
-            android:name=".fwmanage.FollowManagementService"
-            android:exported="true" />
     </application>
 
 </manifest>
