팔로우 관리 서비스의 명복을 빌어 주세요.. / 이제 트윗일지 보고서에서 팔로우 관리를 실행할 수 있습니다. / 팔로우 관리에서 팔로우쉽 변동이 있을 경우 해당 트윗일지 보고서를 갱신합니다.

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -32,16 +32,10 @@
             android:name=".Hetzer.HetzerService"
             android:exported="true" />
 
-        <!--Follow Management-->
-        <activity android:name=".FollowManagement.FollowManagementActivity" />
-        <activity android:name=".FollowManagement.FollowManagementReportActivity" />
-        <service
-            android:name=".FollowManagement.FollowManagementService"
-            android:exported="true" />
-
         <!--Tweet Analytics-->
         <activity android:name=".Analytics.AnalyticsActivity" />
         <activity android:name=".Analytics.AnalyticsReportActivity" />
+        <activity android:name=".Analytics.FollowManagementActivity" />
         <service
             android:name=".Analytics.AnalyticsService"
             android:exported="true" />
