체인블락의 서비스화, 알림 채널을 통일화

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -42,6 +42,9 @@
 
         <!--Chain Block Activities-->
         <activity android:name=".ChainBlock.ChainBlockActivity" />
+        <service
+            android:name=".ChainBlock.ChainBlockService"
+            android:exported="true" />
         <activity android:name=".ChainBlock.BlockClearActivity" />
 
         <meta-data
