--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -46,6 +46,9 @@
             android:name=".ChainBlock.ChainBlockService"
             android:exported="true" />
         <activity android:name=".ChainBlock.BlockClearActivity" />
+        <service
+            android:name=".ChainBlock.BlockClearService"
+            android:exported="true" />
 
         <meta-data
             android:name="com.google.android.gms.ads.APPLICATION_ID"
