#35 에 대응하여 Twitter Client 인스턴스를 사용 전에 할당하도록 변경, 작업 테스트 코드 작성

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,7 +13,6 @@
         android:theme="@style/AppTheme"
         tools:ignore="GoogleAppIndexingWarning"
         tools:replace="android:icon">
-        <activity android:name=".Billing.BillingActivity"></activity>
         <activity android:name=".MainActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -24,6 +23,8 @@
         <activity android:name=".UITestActivity" />
         <activity android:name=".Authenticate.TokenManagementActivity" />
         <activity android:name=".Authenticate.AuthenticationActivity" />
+        <activity android:name=".Billing.BillingActivity"/>
+        <activity android:name=".ScheduledTask.ScheduleManageActivity"/>
         <activity android:name=".Report.ReportListActivity"/>
 
         <!--Hetzer-->
