--- a/app/build.gradle
+++ b/app/build.gradle
@@ -49,4 +49,5 @@ dependencies {
     implementation 'com.google.firebase:firebase-crashlytics:17.1.0'
     implementation 'com.anjlab.android.iab.v3:library:1.0.44'
     implementation 'com.github.takusemba:spotlight:+'
+    implementation 'com.github.kittinunf.fuel:fuel:+'
 }
