새 필터 코드

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -73,6 +73,10 @@
             android:name="com.google.android.gms.ads.APPLICATION_ID"
             android:value="@string/admob_app_id" />
 
+
+        <!-- Test -->
+        <activity android:name=".Hetzer.New.ActivitySelectHetzerType"/>
+
     </application>
 
 </manifest>
