조건 추가 화면 추가

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -76,6 +76,7 @@
 
         <!-- Test -->
         <activity android:name=".Hetzer.New.ActivitySelectHetzerType"/>
+        <activity android:name=".Hetzer.New.AddNewConditionActivity"/>
 
     </application>
 
