트윗일지 예약 작업 기능 추가

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -77,6 +77,11 @@
             android:name=".ChainBlock.BlockClearService"
             android:exported="true" />
 
+        <receiver
+            android:name=".Analytics.AnalyticsNotificationReceiver"
+            android:exported="true">
+        </receiver>
+
         <meta-data
             android:name="com.google.android.gms.ads.APPLICATION_ID"
             android:value="@string/admob_app_id" />
